# ai-news-columnist

./: .flake8  .gitignore  CLAUDE.md  Makefile  README.md  README_PYTHON.md  main.py  metadata.json  package.json  pyproject.toml  requirements.txt  schemas.py  serverless.yml  types.ts
.claude/: settings.local.json
core/: config.py  exceptions.py
docs/architecture/: system_overview.md
middleware/: security.py
services/: content_evaluation_service.py  content_generation_service.py  gemini_service.py  news_search_service.py  prompts.py
tests/: conftest.py  test_main.py  test_summary_guard.py
